Updated DS components to Java 11
Issue-Id : ACUMOS-3453
Description : Update all Design Studio component to use Java 11

Change-Id: Ica024416e8b58b0c40b95a90d54c8848ae48aa41
Signed-off-by: RP00490596 <RP00490596@TechMahindra.com>